feature-templates/nCino/dataset/01yO3G1U-Forms/.store/metadata/objects/nFORMS__Form_Template__c.object
<CustomObject>
    <fields>
        <fullName>nFORMS__Closing_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this required field to link a form template to a Closing Checklist in order to create placeholders with predefined values.</description>
        <inlineHelpText>Links a form template to a Closing Checklist in order to create placeholders with predefined values.</inlineHelpText>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>Form Templates</relationshipLabel>
        <relationshipName>Form_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORMS__Description__c</fullName>
        <description>This field is manually populated. It is optional, but recommended. This field is used to provide users with a description of the form template, so the user knows which form template to use in what situation.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Document_Output_Type__c</fullName>
        <description>The administrators populate this picklist field to define the file type of the generated document. By default, it is blank.</description>
        <inlineHelpText>Select Word, PDF, or HTML format as a document output.</inlineHelpText>
        <label>Document Output Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>nFORMS__Template_Input_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORMS__Enable_FLS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this checkbox is enabled and a user generates a form from this template, the fields that the user does not have read access to are not displayed on the form. For HTML output forms, FLS is always respected, regardless of the value in this checkbox.</description>
        <label>Enable FLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Enforce_Masking__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is manually selected. It is used to control whether the output form displays fields masked using Field Extensions in the clear. When true, masking will be used, when false, fields masked using Field Extensions will display in the clear. By default, it is true.</description>
        <label>Enforce Masking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Filter__c</fullName>
        <description>This field is manually populated. It is optional. It is used to specify criteria that must be met by a record for the form template to be available for Form Generation.</description>
        <inlineHelpText>The form template will only be available to objects that meet this filter criteria.</inlineHelpText>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORMS__Form_Purpose__c</fullName>
        <description>Users populate this optional picklist field with the purpose of the form generation template. By default, it is General.</description>
        <label>Form Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORMS__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It allows the user to select whether a Form Template is available to users. When true, the form template is available, when false, it is not available. By default, it is false.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Output_Type__c</fullName>
        <description>This field is manually selected. It is required. This field specifies whether the generated form should be output in docx or pdf format.</description>
        <label>Output Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Page_Dimension_Unit__c</fullName>
        <description>Admins populate this optional picklist field to define the unit of measurement for the page width. By default, the value is inches.</description>
        <label>Page Dimension Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centimeters</fullName>
                </value>
                <value>
                    <fullName>Inches</fullName>
                    <default>true</default>
                    <label>Inches</label>
                </value>
                <value>
                    <fullName>Millimeters</fullName>
                </value>
                <value>
                    <fullName>Pixels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORMS__Page_Width__c</fullName>
        <description>Admins populate this optional number field to define the page width that displays in the template and upon form generation. By default, the value is blank.</description>
        <label>Page Width</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORMS__Primary_Object__c</fullName>
        <description>This field is manually populated. It is required. This field is used to specify the object this form template is used for.</description>
        <label>Primary Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Save_To_Docman__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It allows the user to specify whether the Form generated should be saved to document manager. When true, it is saved to document manager, when false it is not. By default, it is false.</description>
        <label>Save To Docman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Template_Input_Type__c</fullName>
        <description>The administrators populate this picklist field to define the type of the input file used to generate a document.  By default, it is blank.</description>
        <inlineHelpText>Select Word or HTML format as a document template input.</inlineHelpText>
        <label>Template Input Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORMS__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Template</label>
    <listViews>
        <fullName>nFORMS__All</fullName>
        <columns>NAME</columns>
        <columns>nFORMS__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>